<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/adicionar"
        android:title="@string/adicionar"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/editar"
        android:title="@string/editar"
        android:icon="@drawable/ic_edit_black_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/remover"
        android:title="@string/remover"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        app:showAsAction="always"
        />
    <item
    android:id="@+id/sobre"
    android:title="@string/Sobre"
    />
    <item
        android:id="@+id/configuracoes"
        android:title="@string/Configurações" />

</menu>